CHANGE_LOG

For the Github commit log see here: github.com/jks-prv/kiwiclient/commits/master

v1.7  August 20, 2025
    Incorporated standard-chunk source code to eliminate all the problems with Python 13 and
        Debian 13 not being able to find and include the correct package.

v1.6  July 11, 2025
    By request: The resampling option now works with netcat and camping modes.

v1.5  June 15, 2025
    Added continuous frequency scanning capability.
        Kiwirecorder previously had a squelch-based scanning function using parameters specified
        with a YAML file and the --scan-yaml option. A set of frequencies would be scanned and the
        scanning stopped when the squelch opened. Continuous scanning will now occur if the
        "threshold" parameter is not given in the YAML file. See the file SCANNING for complete info.
        
        Note that the former example file scan.yaml has been renamed to scan_squelch.yaml to
        distinguish it from the new example file scan_continuous.yaml used in frequency scanning.
    
    Added Kiwi channel camping feature.
        Instead of creating a new connection to the Kiwi when kiwirecorder is run it can now "camp"
        onto an existing connection and record whatever audio the camped user is listening to.
        Very similar to the camp capability that is presented via the camp/queue panel that appears
        when you try and connect to a Kiwi when all its channels are full. See the option
        --camp=CAMP_CHAN where CAMP_CHAN is the channel number to camp on (e.g. 0..4 for rx0..rx4).

        Note that a 2-channel (stereo) file or netcat stream is always produced because you can't
        predict what the camped user will do. They may switch from a mono mode (e.g. USB) to a
        stereo mode (e.g. IQ) at any time. For mono modes the single channel audio is duplicated in
        both channels. Things also work when the camped user switches compression mode on and off.
