@@ -1,3 +1,4 @@
+#!/usr/bin/env python3
 """Simple class to read IFF chunks.
 
 An IFF chunk (used in formats such as AIFF, TIFF, RMFF (RealMedia File
